Fixed typos and grammar in description, added more information there
git-svn-id: http://svn.symfony-project.com/plugins/sfDoctrineActAsTaggablePlugin/trunk@17421 ee427ae8-e902-0410-961c-c3ed070cd9f9

--- a/package.xml.tmpl
+++ b/package.xml.tmpl
@@ -3,7 +3,7 @@
     <name>sfDoctrineActAsTaggablePlugin</name>
     <channel>pear.symfony-project.com</channel>
     <summary>sfDoctrineActAsTaggable Plugin</summary>
-    <description>A port of sfPropelActAsTaggle plugin. As Doctrine wont support tagging very soon and there is more than database tagging in this project</description>
+    <description>A port of sfPropelActAsTaggable plugin. Doctrine doesn't have native tagging yet, and this project also offers tag typeahead and other advanced features</description>
     <lead>
         <name>Mickael Kurmann</name>
         <user>Mickael.Kurmann</user>
