[sfDoctrineActAsTaggablePlugin] [branche nperriault] fixed preloadTags() for MySQL, updated some phpdoc
git-svn-id: http://svn.symfony-project.com/plugins/sfDoctrineActAsTaggablePlugin/branches/nperriault@20107 ee427ae8-e902-0410-961c-c3ed070cd9f9

--- a/package.xml.tmpl
+++ b/package.xml.tmpl
@@ -29,6 +29,12 @@
     <email>alex@punkave.com</email>
     <active>yes</active>
   </developer>
+  <developer>
+    <name>Nicolas Perriault</name>
+    <user>nicolas</user>
+    <email>nperriault@gmail.com</email>
+    <active>yes</active>
+  </developer>
   <date>##CURRENT_DATE##</date>
   <version>
     <release>##PLUGIN_VERSION##</release>
