--- a/package.xml.tmpl
+++ b/package.xml.tmpl
@@ -29,6 +29,12 @@
     <email>alex@punkave.com</email>
     <active>yes</active>
   </developer>
+  <developer>
+      <name>Dan Ordille</name>
+      <user>dordille</user>
+      <email>dan@punkave.com</email>
+      <active>yes</active>
+  </developer>
   <date>##CURRENT_DATE##</date>
   <version>
     <release>##PLUGIN_VERSION##</release>
