--- a/package.xml.tmpl
+++ b/package.xml.tmpl
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <package xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" packagerversion="1.4.1" version="2.0" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0 http://pear.php.net/dtd/tasks-1.0.xsd http://pear.php.net/dtd/package-2.0 http://pear.php.net/dtd/package-2.0.xsd">
   <name>sfDoctrineActAsTaggablePlugin</name>
-  <channel>pear.symfony-project.com</channel>
+  <channel>plugins.symfony-project.org</channel>
   <summary>This behavior allows tags to be attached to Doctrine objects.</summary>
   <description>This behavior allows tags to be attached to Doctrine objects. It includes tag-cloud generation and helpers to display these clouds. It also offers optional typeahead features for entering tags.
   </description>
@@ -28,6 +28,12 @@
     <user>alex-gilbert</user>
     <email>alex@punkave.com</email>
     <active>yes</active>
+  </developer>
+  <developer>
+      <name>Dan Ordille</name>
+      <user>dordille</user>
+      <email>dan@punkave.com</email>
+      <active>yes</active>
   </developer>
   <date>##CURRENT_DATE##</date>
   <version>
