--- a/package.xml.tmpl
+++ b/package.xml.tmpl
@@ -61,13 +61,45 @@
         <name>symfony</name>
         <channel>pear.symfony-project.com</channel>
         <min>1.2.0</min>
-        <max>1.3.0</max>
-        <exclude>1.3.0</exclude>
+        <max>2.0.0</max>
+        <exclude>2.0.0</exclude>
       </package>
     </required>
   </dependencies>
   <phprelease></phprelease>
   <changelog>
+    <release>
+        <version>
+            <release>1.0.0</release>
+            <api>1.0.0</api>
+        </version>
+        <stability>
+            <release>stable</release>
+            <api>stable</api>
+        </stability>
+        <license uri="http://www.symfony-project.com/license">MIT license</license>
+        <date>2010-02-02</date>
+        <license>MIT</license>
+        <notes>
+          Correct PEAR channel for package. --verbose option for taggable:clean, which is now quiet by default as all cron jobs should be when nothing is wrong. Documented taggable:clean. Added additional developer credits. Acknowledged Symfony 1.3/1.4 compatibility. Fixed schema.yml syntax for indexes for the tag table, the wrong syntax was tolerated by MySQL but caused errors in SQLite. Nonbreaking spaces are no longer inserted into the left spacer of the tag typeahead module. CSS suggestions updated. 
+        </notes>
+    </release>
+    <release>
+        <version>
+            <release>0.0.8</release>
+            <api>1.0.0</api>
+        </version>
+        <stability>
+            <release>stable</release>
+            <api>stable</api>
+        </stability>
+        <license uri="http://www.symfony-project.com/license">MIT license</license>
+        <date>2009-06-09</date>
+        <license>MIT</license>
+        <notes>
+          Addressing a packaging problem. No functional changes
+        </notes>
+    </release>
     <release>
         <version>
             <release>0.0.7</release>
